NormalVersionWithLogger/src/main/java/com/example/rabam/error/PackageDeliveringStatusException.java
package com.example.rabam.error;

public class PackageDeliveringStatusException extends RuntimeException{
    public PackageDeliveringStatusException() {
        super("Package estimate time error");
    }
}
